# FutureCreationScript

./: CLAUDE.md  main.py  pyproject.toml  test_results.json
data/: app.db
data/livedoor/: dokujo-tsushin.csv  it-life-hack.csv  kaden-channel.csv  livedoor-homme.csv  movie-enter.csv  peachy.csv  smax.csv  sports-watch.csv  topic-news.csv
src/: async_composer.py  async_llm_client.py  composer.py  comprehensive_evaluator.py  data_loader.py  evaluation_converter.py  json_handler.py  lda_model.py  llm_client.py  main.py  prompter.py  tagger.py
tests/: test_async_composer.py  test_async_llm_client.py  test_composer.py  test_data_loader.py  test_evaluation_converter.py  test_json_handler.py  test_main.py  test_prompter.py
